Small shadow adjustment on docs and highlight js Fixed: Docs pages are not centered

--- a/src/@assembly/styles/plugins/highlightjs.scss
+++ b/src/@assembly/styles/plugins/highlightjs.scss
@@ -11,7 +11,6 @@
 
         pre[class*="language-"] {
             border: 1px solid rgba(255, 255, 255, 0.08);
-            box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.08);
         }
 
         code[class*="language-"],
@@ -83,11 +82,6 @@
     }
         // LIGHT COLOR SCHEME
     @else {
-
-        pre[class*="language-"] {
-            border: 1px solid map-get($foreground, divider);
-            box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.06);
-        }
 
         code[class*="language-"],
         pre[class*="language-"] {
@@ -200,6 +194,7 @@ pre[class*="language-"] {
 pre[class*="language-"] {
     padding: 24px;
     margin: 0;
+    @include asm-shadow(1);
 }
 
 :not(pre) > code[class*="language-"] {
