--- a/src/app/modules/admin/docs/docs.theme.scss
+++ b/src/app/modules/admin/docs/docs.theme.scss
@@ -20,7 +20,6 @@
 
             .docs-simple-table {
                 background-color: map-get($background, card);
-                border: 1px solid map-get($foreground, divider);
 
                 table {
 
